 (Format: Year/Month/Day)
Changes for 1.0.0:
*07/06/30:
   * Fix _NET_WM_STATE_DEMANDS_ATTENTION with tabbed windows, #1732392 (Mark)
     Ewmh.cc/hh
*07/06/29:
   * Updates for compiling with gcc 4.3 (thanks Dmitry E. Oboukhov)
*07/06/28:
   * Strip off additional bits in event state set by Xorg, bug #1736252 (Mark)
     FbTk/KeyUtil.hh
   * Added some missing Open Office entries and window managers, plus some other
     minor changes in fluxbox-generate_menu
     fluxbox-generate_menu.in
*07/06/16:
   * Fixed compile error with --disable-remember (Mark)
     Window.cc/hh Remember.cc/hh
*07/06/09:
   * Minor change to the /bin/sh - solution (Mathias)
     we are using now just $SHELL -c <line_here>
     src/FbCommands.cc util/fbrun/FbRun.cc
*07/06/08:
   * Fix transient windows getting tabbed from apps file and not changing layers
     when main window is in a lowered tab (Mark)
     WinClient.cc Window.cc Remember.cc
*07/06/06:
   * Fix to avoid rogue instances of /bin/sh after forking away programs (Mathias)
     util/fbrun/FbRun.cc src/FbCommands.cc
*07/06/04:
   * Fix fluxbox.1.in, and asciidoc, menu command is "wallpapers" not
     "wallpaper". asciidoc manpages are stale.
   * Fix submenu placement with xinerama after moving the menu between heads,
     bug #1479517 (Mark)
     FbMenu.cc/hh FbTk/Menu.hh
*07/06/03:
   * Deiconify when automatically tabbing to a minimized window with focus new
     windows on, bug #1716899 (Mark)
     Window.cc FbWinFrame.cc
   * Submenus of slit menu were misbehaving with xinerama (Mark)
     Slit.cc
   * Also send transient windows when sending a window to another workspace, bug
     #1716900 (Mark)
     Screen.cc
   * Only change layer to normal when removing _NET_WM_STATE_{ABOVE,BELOW} if
     the window is actually above/below the normal layer (thanks Jim Ramsay)
     Ewmh.cc
*07/06/01:
   * Fixed infinite loop caused by removing the last workspace when it contains
     windows (Mark)
     Workspace.cc
*07/05/20: